[project]
name = "arxiv-discovery"
version = "0.1.0"
description = "A tool for discovering research papers from arXiv."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "feedparser>=6.0.12",
    "jinja2>=3.1.6",
    "json5>=0.12.1",
    "numpy>=2.3.4",
    "pylatexenc>=2.10",
    "sentence-transformers>=5.1.2",
]
